update styling to correct display errors on smallest mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-size: large;
+  font-size: medium;
   background-color: rgb(23, 33, 61);
   font-family: 'DIN Condensed','DIN Alternate','Silom','Segoe UI Black','Tahoma',sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -20,7 +20,7 @@ body {
 
 #Footer {
   justify-content: center;
-  display:flex;
+  display: flex;
   margin-top: 1rem;
 }
 
@@ -52,7 +52,8 @@ p {
   text-align: justify;
   color: white;
   text-shadow: 2px 2px rgb(0, 0, 0);
-  margin-left: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 #profilePic {
@@ -82,6 +83,7 @@ code {
 }
 
 .footerCard{
+  font-size: small;
   border-radius: 0.5rem;
   background-color: rgba(116, 151, 255, 0.3);
   filter: drop-shadow(2px 2px 3px rgb(0,0,0));
@@ -103,6 +105,16 @@ code {
     margin-right: 10rem;
   }
 
+  body {
+    font-size: large;
+  }
+  #Footer {
+    display:flex;
+  }
+  .footerCard{
+    font-size: large;
+    max-width: auto;
+  }
   .sampleText {
     display: block;
     margin-left: 23rem;
